layout shift issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,7 @@
 } */
 
 
-body {font-family: 'Noto Sans';background: #fff;overflow: auto;font-size: 14px;overflow-x: hidden;padding-top: 0px; content-visibility: auto;
-  contain-intrinsic-size: auto 100px;}
+body {font-family: 'Noto Sans';background: #fff;overflow: auto;font-size: 14px;overflow-x: hidden;padding-top: 0px; }
   h1, h2, h3, h4, h5, h6, p {
     content-visibility: visible !important;
     contain: none !important;
